<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- calendar strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="create_new_activity_string">Create new activity</string>
    <string name="___string">+</string>
    <string name="september_13___sunday_string">September 13 - Sunday </string>
    <string name="penang__georgetown_string">Penang, Georgetown </string>
    <string name="september_10___tuesday_string">September 10 - Tuesday</string>
    <string name="kuala_lumpur__petaling_street_string">Kuala Lumpur, Petaling Street</string>
    <string name="september_12___saturday_string">September 12 - Saturday</string>
    <string name="kuala_lumpur__batu_caves_string">Kuala Lumpur, Batu Caves</string>
    <string name="september_11___friday_string">September 11 - Friday </string>
    <string name="kuala_lumpur__petronas_towers_string">Kuala Lumpur, Petronas Towers</string>
    <string name="hello__oliver__string">Hello,Oliver!</string>
    <string name="hello__oliver__ek1_string">Hello,Oliver!</string>
    <string name="kuala_lumpur__petaling_street_ek1_string">Kuala Lumpur, Petaling Street</string>
    <string name="closes_at_22_00_string">Closes at 22:00</string>
    <string name="jalan_petaling__city_centre__50000_kuala_lumpur_string">Jalan Petaling, City Centre, 50000 Kuala Lumpur</string>
    <string name="september_10___tuesday_ek1_string">September 10 - Tuesday</string>
    <string name="_11_30___bus_ride_to_pavillion_mall_string">11:30 - Bus ride to Pavillion mall </string>
    <string name="_12_30___lunch_at_pavillion_string">12:30  - Lunch at Pavillion </string>
    <string name="_13_30___taxi_to_petaling_street_string">13:30 - Taxi to Petaling Street </string>
    <string name="_14_00___tour_at_petaling_steet_string">14:00 - Tour at Petaling Steet </string>
    <string name="_11_30___taxi_back_to_the_hotel_string">11:30 - Taxi back to the Hotel </string>
    <string name="optionsAddPlusString">+</string>
    <string name="__3_string">+3</string>
    <string name="hello__oliver__ek2_string">Hello,Oliver!</string>
    <string name="all_string">All</string>
    <string name="streetfood_string">Streetfood</string>
    <string name="local_string">Local</string>
    <string name="entertainment_string">Entertainment</string>
    <string name="likes_string_blogpost_5">909 </string>
    <string name="username_string_Blogpost_5">/@all0v0rtheworld23</string>
    <string name="title_string">The ultimate Langkawi to-do list</string>
    <string name="likes_string_blogpost_4">341</string>
    <string name="username_string_blogpost_4">/@travelwithtom</string>
    <string name="blogpost_5Headline">Perhentian islands</string>
    <string name="likes_string_blogpost_3">755</string>
    <string name="username_string_blogpost_3">/@localtravel</string>
    <string name="blogpost_4Headline">8 best local experiences in Penang</string>
    <string name="likes_string_blogpost_2">132</string>
    <string name="username_string_blogpost_2">/@david787</string>
    <string name="cameron_highlands_headline">Everything you should know about Cameron Highlands</string>
    <string name="likes_string_blogpost_1">866</string>
    <string name="username_string_blogpost_1">/@mean.photo </string>
    <string name="headline_blogpost_1">Best street-food spots in Kuala Lumpur</string>
    <string name="subtitle_string">7 days till your next trip..</string>
    <string name="title_ek5_string">Discovery</string>
    <string name="upcoming_trip_string">Upcoming trip</string>
    <string name="hello__oliver__ek3_string">Hello,Oliver!</string>
    <string name="petaling_street_string">Petaling Street</string>
    <string name="kuala_lumpur_string">Kuala Lumpur</string>
    <string name="september_10___tuesday_ek2_string">September 10 - Tuesday </string>
    <string name="hi_oliver__where_do_you_want_to_go__string">Hi Oliver, where do you want to go?</string>
    <string name="batu_caves_string">Batu Caves</string>
    <string name="federal_mosque_string">Federal Mosque</string>
    <string name="petaling_street_ek1_string">Petaling Street</string>
    <string name="penang____string">Penang...</string>
    <string name="bookmarkLocationHeadline">Penang Hill</string>
    <string name="kek_lok_si_temple_string">Kek Lok Si Temple</string>
    <string name="gurney_drive_string">Gurney Drive</string>
    <string name="batu_ferringhi_string">Batu Ferringhi</string>
    <string name="restaurants_string">Restaurants</string>
    <string name="party_string">Party</string>
    <string name="culture_string">Culture</string>
    <string name="outdoor_string">Outdoor</string>
    <string name="_4_8_string">4.8</string>
    <string name="bookmarkLocationInformationAddress">Adress: 11500 Bukit Bendera, Penang </string>
    <string name="bookmarkLocationInformationOperating_hours">Operating hours: 10am - 6pm</string>
    <string name="bookmarkLocationInformationPrice_range">Price range: 100</string>
    <string name="bookmarkLocationInformationTransport_options">Transport options: N/A</string>
    <string name="information_subtitle_bookmark_location_add_options">Information</string>
    <string name="information_ek2_string">Convenient to the top #penanghill</string>
    <string name="optionsHeadlineString">What I did at #penanghill</string>
    <string name="information_ek4_string">Traveller Thoughts</string>
    <string name="articles_string">Articles</string>
    <string name="states_string">States</string>
    <string name="best_instagrammable_cafes_in_kuala_lumpur_string">Best instagrammable cafes in Kuala Lumpur</string>
    <string name="top_7_places_in_pahang_string">Top 7 Places in Pahang</string>
    <string name="sabah_string">Sabah</string>
    <string name="selangor_string">Selangor</string>
    <string name="malacca_string">Malacca</string>
    <string name="penang____ek1_string">Penang...</string>

	<string name="sabah_trip_string">Sabah Trip </string>
	<string name="_6___10_december_2021_string">6 - 10 December 2021</string>
	<string name="penang_trip_string">Penang Trip </string>
	<string name="_3___5_september_2022_string">3 - 5 September 2022</string>
	<string name="malacca_trip_string">Malacca Trip</string>
	<string name="_20___23_june_2022_string">20 - 23 June 2022</string>
	<string name="ipoh_trip_string">Ipoh Trip</string>
	<string name="_17___20_february_2022_string">17 - 20 February 2022</string>
	<string name="_3___5_september_2022_ek1_string">3 - 5 September 2022</string>
	<string name="penang_trip_ek1_string">Penang Trip </string>
	<string name="___add_activity_string">+ Add Activity </string>
	<string name="day_1_string">Day 1</string>
	<string name="automate_ek1_string">Automate</string>
	<string name="___add_activity_ek1_string">+ Add Activity </string>
	<string name="day_2_string">Day 2</string>
	<string name="___add_activity_ek2_string">+ Add Activity </string>
	<string name="day_5_string">Day 5</string>
	<string name="___add_activity_ek3_string">+ Add Activity </string>
	<string name="day_4_string">Day 4</string>
	<string name="___add_activity_ek4_string">+ Add Activity </string>
	<string name="day_3_string">Day 3</string>
	<string name="penang_trip_ek2_string">Penang Trip </string>
	<string name="add_activities_to_your_trip_string">Add activities to your trip</string>
	<string name="bookmark_1_ek1_string">Bookmark 1</string>
	<string name="bookmark_2_ek1_string">Bookmark 2</string>
	<string name="bookmark_3_ek1_string">Bookmark 3</string>
	<string name="bookmark_4_ek1_string">Bookmark 4</string>
	<string name="information_string">Your bookmarks</string>
	<string name="create_new_trip_string"><u>Create new trip</u></string>
	<string name="add_to_penang_trip_string">Add to Penang Trip</string>
	<string name="add_to_ipoh_trip_string">Add to Ipoh Trip</string>
	<string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__ut_enim_ad_minim_veniam__quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat__duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur__excepteur_sint_occaecat_cupidatat_non_proident__sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum__duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur__excepteur_sint_occaecat_cupidatat_non_proident__sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum__string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
	<string name="username_ek5_string">@all0v0rtheworld23</string>
	<string name="likes_ek5_string">909 </string>
	<string name="title_ek6_string">The ultimate Langkawi to-do list</string>
	<string name="__langkawi_string">#langkawi</string>
	<string name="__weekendtrip_string">#weekendtrip</string>
	<string name="hello__oliver__ek4_string">Hello,Oliver!</string>
    <string name="adress_operating_hours_price_range_transport_options__string">AdressOperating HoursPrice RangeTransport Options: </string>
    <string name="penang">Penang</string>
    <string name="oliver">Oliver!</string>
    <string name="penang_hill">Penang Hill</string>
    <string name="hello">Hello,</string>
    <string name="Day_1">1</string>
    <string name="Day_2">2</string>
    <string name="Day_3">3</string>
    <string name="Day_4">4</string>
    <string name="Day_5">5</string>
</resources>